--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -4418,45 +4418,45 @@ kg
                     },
                     "l": ["../../image_sp/card/l/ranko_01.jpg", 
                           "../../image_sp/card/l/ranko_02.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/c340069fa99350b0a29508ddf3392a44.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/be29acd9c1b205a8c69f4fd5b8763b1d.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/78ba6d819af44ef169d32cc6685541a1.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/d1052359816fb13ba2b87fc90abccf00.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/070ed187236849ff082bcab7fde5af4c.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/b68433f5242f9a792a023ec1ad6e53fd.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/5062961868cf70cc24fdb4fe6d319c14.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_03.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_04.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_05.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_06.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_07.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_08.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_09.jpg", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f3f87f1ea01adffba286106b365275a8.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_11.jpg", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/2843d6da5edda215be6641a742189bbd.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/2fc7aaa1afffe3a797b9f64b8fac0a1e.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f8b9134d6146874bad5933a284a3d760.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/d712a295960479bc715630e80c819f69.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/9ed747defd1c6c795859a5170f375893.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/29805f362930be2c4ad6c790285184c0.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/a8966398cde53faf1eea3197d044fa09.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_13.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_14.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_15.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_16.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_17.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_18.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_19.jpg", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/3986012e2714597c8db0358919b7fcbf.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/46d53903234e41082a542084e262e4ba.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/fd87367a4c86b934f53471b7127afba7.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/6782836a094a5ce9e71cdbf4d658fa90.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/44f5225bbe4ef204a0840a870fb8604c.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/3b9d6ba1ef0523d273c0203b04eb9400.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/c96e33b66c7d171dee121d2438fac8f9.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_21.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_22.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_23.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_24.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_25.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_26.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_27.jpg", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f986c2312524eac7b1b34979f6622857.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/0dd49bd187f75d83e8438a5556128ea5.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/5426ce4a0ecdfb0d967a3b88f5de2d3f.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/77888b116140c6eb07648568dd1e46ed.jpg", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f011bd8445519452f410cc4e6e2815b0.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_29.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_30.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_31.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_32.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_33.jpg", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/765f35d9d6072fdafa42b0cf1554748c.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_35.jpg", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/f7b5779f0be2a34b849c1bd37ce584cc.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_37.jpg", 
                           "", 
                           "", 
                           "", 
-                          "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card_sign_b/l/8afa06956e46fc726db74276c0082f64.jpg", 
+                          "../../image_sp/card_sign_b/l/ranko_41.jpg", 
                           ""],
                     "l_premium": {
                         "2": "../../image_sp/card_sign_p/l/ranko_03.jpg",
